feat: add login along with cookie session