@@ -4,9 +4,14 @@ import com.b216.umrs.features.auth.model.Role;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.http.HttpMethod;
+import org.springframework.security.authentication.AuthenticationManager;
+import org.springframework.security.authentication.ProviderManager;
+import org.springframework.security.authentication.dao.DaoAuthenticationProvider;
 import org.springframework.security.config.annotation.method.configuration.EnableMethodSecurity;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
 import org.springframework.security.config.annotation.web.configuration.EnableWebSecurity;
+import org.springframework.security.config.annotation.web.configurers.AbstractHttpConfigurer;
+import org.springframework.security.core.userdetails.UserDetailsService;
 import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder;
 import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.security.web.SecurityFilterChain;
@@ -17,9 +22,6 @@ import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 import java.util.Arrays;
 import java.util.List;
 
-/**
- * Базовая конфигурация безопасности: отключать аутентификацию и разрешать доступ ко всем эндпоинтам.
- */
 @Configuration
 @EnableWebSecurity
 @EnableMethodSecurity
@@ -29,11 +31,11 @@ public class SecurityConfig {
     public SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
         http
             .cors(cors -> cors.configurationSource(corsConfigurationSource()))
-            .sessionManagement(httpSecuritySessionManagementConfigurer -> {
+            .sessionManagement(httpSecuritySessionManagementConfigurer ->
                 httpSecuritySessionManagementConfigurer.maximumSessions(15)
                     .maxSessionsPreventsLogin(true)
-                    .expiredUrl("/login?expired=true");
-            })
+                    .expiredUrl("/login?expired=true")
+            )
             .csrf(csrf -> csrf.disable()) // TODO enable and configure
             .authorizeHttpRequests(auth -> auth
                 .requestMatchers("/api/v1/developer/**").hasAnyRole(Role.DEVELOPER.name(), Role.ADMIN.name())
@@ -42,6 +44,9 @@ public class SecurityConfig {
                 .requestMatchers("/api/v1/admin/**").hasRole(Role.ADMIN.name())
                 .requestMatchers("/api/v1/public/**").permitAll()
                 .requestMatchers("/api/v1/signup/**").permitAll()
+                .requestMatchers("/api/v1/auth/login").permitAll()
+                .requestMatchers("/api/v1/auth/logout").permitAll()
+                .requestMatchers("/api/v1/auth/me").authenticated()
                 .requestMatchers("/api/health").permitAll()
                 .requestMatchers("/api/v1/public/forms/**").permitAll()
                 .requestMatchers(HttpMethod.POST, "/api/v0/movements/").permitAll()
@@ -60,7 +65,7 @@ public class SecurityConfig {
             })
             .httpBasic(basic -> {
             })
-            .formLogin(form -> form.disable());
+            .formLogin(AbstractHttpConfigurer::disable);
 
         return http.build();
     }
@@ -68,12 +73,17 @@ public class SecurityConfig {
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
-        // Разрешает запросы с любых источников (для разработки)
-        // TODO В продакшене указать конкретные домены
-        configuration.setAllowedOrigins(List.of("*"));
+        configuration.setAllowedOrigins(Arrays.asList(
+            "http://localhost:5173",
+            "http://localhost:3000",
+            "http://manual-geoform:5173",
+            "http://manual-geoform:80",
+            "http://frontend:5173",
+            "http://frontend:80"
+        ));
         configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS", "PATCH"));
         configuration.setAllowedHeaders(List.of("*"));
-        configuration.setAllowCredentials(false); // Должно быть false при allowedOrigins("*")
+        configuration.setAllowCredentials(true); // Включает отправку cookies (JSESSIONID)
         configuration.setMaxAge(3600L);
 
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
@@ -84,6 +94,17 @@ public class SecurityConfig {
     @Bean
     public PasswordEncoder passwordEncoder() {
         return new BCryptPasswordEncoder();
+    }
+
+    @Bean
+    public AuthenticationManager authenticationManager(
+        UserDetailsService userDetailsService,
+        PasswordEncoder passwordEncoder) {
+        DaoAuthenticationProvider authenticationProvider = new DaoAuthenticationProvider();
+        authenticationProvider.setUserDetailsService(userDetailsService);
+        authenticationProvider.setPasswordEncoder(passwordEncoder);
+
+        return new ProviderManager(authenticationProvider);
     }
 }
 
